[package]
name = "bargo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version= "0.12.3", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"